--- a/Discover/.classpath
+++ b/Discover/.classpath
@@ -3,6 +3,17 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="libs/spring-android-core-1.0.0.RELEASE-javadoc.jar"/>
+	<classpathentry kind="lib" path="libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar"/>
+	<classpathentry kind="lib" path="libs/spring-android-core-1.0.0.RELEASE.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Discover/libs/spring-android-core-1.0.0.RELEASE-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/spring-android-rest-template-1.0.0.RELEASE.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Discover/libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
