--- a/Discover/.classpath
+++ b/Discover/.classpath
@@ -15,5 +15,6 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Discover/libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
