--- a/Phone/main/.classpath
+++ b/Phone/main/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="libs/spring-android-core-1.0.0.RELEASE-javadoc.jar"/>
-	<classpathentry kind="lib" path="libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar"/>
 	<classpathentry kind="lib" path="libs/spring-android-core-1.0.0.RELEASE.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/Discover/libs/spring-android-core-1.0.0.RELEASE-javadoc.jar!/"/>
@@ -12,7 +10,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/spring-android-rest-template-1.0.0.RELEASE.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/Discover/libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/com.discover.mobile.login.LoginActivity/libs/spring-android-rest-template-1.0.0.RELEASE-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
