--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:name=".Discover"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
+        android:theme="@android:style/Theme.Holo" 
         android:allowBackup="false">
         
         <activity 
