--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:name=".Discover"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" 
         android:allowBackup="false">
+                <!-- android:theme="@style/AppTheme" -->
+        
         
         <activity 
             android:name=".login.LandingActivity"
