--- a/Commons/main/AndroidManifest.xml
+++ b/Commons/main/AndroidManifest.xml
@@ -5,10 +5,9 @@
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15" />
 
-    <application android:label="@string/app_name"
+    <!-- <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-
-    </application>
+    </application> -->
 
 </manifest>
