--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
+    
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	
     <application
         android:name=".Discover"
@@ -14,7 +16,6 @@
         android:label="@string/app_name"
         android:allowBackup="false">
                 <!-- android:theme="@style/AppTheme" -->
-        
         
         <activity 
             android:name=".login.LandingActivity"
