Updated the login landing page - after a user logs in. In the process of adding custom table cells

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
        </activity>
        
         <activity 
-            android:name=".login.LoggedInLandingPage"
+            android:name=".LoggedInLanding.LoggedInLandingPage"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
