Started setup of environment-specific configurations by defining an environment.xml for mst0. This should not be placed into res/values because it will conflict with an environment.xml placed there for development purposes. The appropriate environment configuration should be placed in res/values at build time.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-lt application files
+# Project environment configurations
+Commons/main/res/values/environment.xml
+
+# lt application files
 *.apk
 *.ap_
 
