--- a/Commons/main/project.properties
+++ b/Commons/main/project.properties
@@ -14,4 +14,4 @@
 target=android-16
 android.library=true
 
-proguard.config=proguard-project.txt
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
