--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -43,6 +43,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
+       
+        <activity 
+            android:name=".login.AccountInformationActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+       </activity>
 
     </application>
 
