--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name=".Discover"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
-        android:allowBackup="false">
+        android:allowBackup="false" android:theme="@style/AppTheme">
                 <!-- android:theme="@style/AppTheme" -->
         
         <activity 
