--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:name=".Discover"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
-        android:allowBackup="false" android:theme="@style/AppTheme">
-                <!-- android:theme="@style/AppTheme" -->
-        
+        android:allowBackup="false" 
+        android:theme="@android:style/Theme.NoTitleBar"
+        >        
         <activity 
             android:name=".login.LandingActivity"
             android:label="@string/app_name"
