--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
-        android:theme="@android:style/Theme.NoTitleBar"
+        android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
         >        
         <activity 
             android:name=".login.LandingActivity"
@@ -35,6 +35,11 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
        </activity>
        
         <activity 
@@ -42,6 +47,11 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
        </activity>
        
         <activity 
@@ -49,6 +59,11 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
        </activity>
 
     </application>
