Added new activity for account security, between screen 1 and 2 when creating a new user.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ Commons/main/res/values/environment.xml
 # generated files
 bin/
 gen/
+target
 
 # Local configuration file (sdk path, etc)
 local.properties
