--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	
     <application
-        android:name=".Discover"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
@@ -32,6 +31,13 @@
             
         <activity 
             android:name=".login.LoginActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+       </activity>
+       
+      <activity 
+            android:name=".login.EnhancedAccountSecurity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
