--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -36,9 +36,9 @@
             android:screenOrientation="portrait">
             
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            
        </activity>
        
       <activity 
@@ -55,9 +55,9 @@
             android:screenOrientation="portrait">
             
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            
        </activity>
        
         <activity 
@@ -67,9 +67,9 @@
             android:screenOrientation="portrait">
             
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            
        </activity>
 
     </application>
