--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -71,6 +71,18 @@
             </intent-filter>
             
        </activity>
+       
+        <activity 
+            android:name=".login.AccountInformationTwoActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+            
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            
+       </activity>
 
     </application>
 
