Added the strength bar to indicate the strength of a given password or usrname. Needs to have updated business rules to function exactly like the Discover one. Created a class called InputStrengthBar that should be used to create a subclass of View so that the strength bar can be used more easily. Also moved the register classes into a new package called register.

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
        </activity>
        
       <activity 
-            android:name=".login.EnhancedAccountSecurity"
+            android:name="register.EnhancedAccountSecurity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -61,7 +61,7 @@
        </activity>
        
         <activity 
-            android:name=".login.AccountInformationActivity"
+            android:name="register.AccountInformationActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -73,7 +73,7 @@
        </activity>
        
         <activity 
-            android:name=".login.AccountInformationTwoActivity"
+            android:name="register.AccountInformationTwoActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
