--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
-        android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
+        android:theme="@android:style/Theme.NoTitleBar"
         >        
         <activity 
             android:name=".login.LandingActivity"
