--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
        </activity>
        
         <activity 
-            android:name="com.discover.mobile.register.AccountInformationConfirmation"
+            android:name=".register.AccountInformationConfirmationActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
