Added Google Analytics to the project and changed the environment parameter naming convention.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Project environment configurations
-Commons/main/res/values/environment.xml
+Commons/main/res/values/env_*.xml
 
 # lt application files
 *.apk
