--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	
     <application
+    	android:name=".DiscoverApplication"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
-        android:theme="@android:style/Theme.NoTitleBar"
-        >        
+        android:theme="@android:style/Theme.NoTitleBar">
+        
         <activity 
             android:name=".login.StartActivity"
             android:label="@string/app_name"
