--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+            
+           <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
        </activity>
        
         <activity 
@@ -79,6 +83,16 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+           <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+       </activity>
+       
+        <activity 
+            android:name=".register.AccountInformationConfirmationActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -86,8 +100,8 @@
             
        </activity>
        
-        <activity 
-            android:name=".register.AccountInformationConfirmationActivity"
+         <activity 
+            android:name=".register.AccountInformationHelpActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
