AndroidManifest.xml - Removed some whitespace. Added new activity for ForgotCredentials and ForgotUserId. account_info.xml - Renamed the title label to be more generic since we are now using this screen for more than one similar purpose. login.xml - Removed an unecessary table row and replaced it with the TextView that was previously inside it and made it clickable. This also means I was able to remove the unnecessary invisible button that was used as whitespace… resources.xml - Added a new string array resource that is not currently used as it is just hard coded into the activity at the moment. strings.xml - Added new variables for new screens. And a new color. Overall nothing to see here. LoginActivity.java - Added support for the "Forgot User ID or Password?" link. Now starts an activity and works! AccountInformationActivity.java - Added support for forgot password and forgot both options. So this activity will support 3 functions in the future. A user forgetting their pass, id and pass, and registering a new user. Added newlines to the intent creation so it does not exceed 80 chars on the screen. forgot_id.xml - New layout for the forgot ID activity - its different than forgot pass or forgot both. ForgotUserIdActivity.java - Handles and validates proper input. Needs to get a service call though. ForgotCredentialsActivity.java - Main activity for when a user presses the "Forgot User ID or Password?" link from the home screen. Seems to function as required. CustomArrayAdapter.java - A subclass of ArrayAdapter<String> to allow list elements to have those fancy arrow indicators on the ForgotCredentialsActivity activity. big_error.xml - Added generic debugging layout in case it is needed. Should be used when a layout cant get set properly.
If I missed anything it was obviously not important… duh.

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -30,17 +30,17 @@
                 </category>
             </intent-filter>
         </activity>
-            
+        
+        
+<!-- TODO decide if these activities need intent-filters - lint says no -->
         <activity 
             android:name=".login.LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
        </activity>
        
       <activity 
@@ -48,7 +48,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
            <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -59,11 +58,9 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
        </activity>
        
         <activity 
@@ -71,11 +68,9 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
        </activity>
        
         <activity 
@@ -105,11 +100,29 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
-            <intent-filter>
+             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
+       </activity>
+       
+       <activity 
+            android:name=".login.ForgotCredentialsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+              <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+       </activity>
+       
+       <activity 
+            android:name=".login.ForgotUserIdActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+               <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
        </activity>
 
     </application>
