--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:allowBackup="false" 
         android:theme="@android:style/Theme.NoTitleBar">
         
-        <activity 
+       	<activity 
             android:name=".login.StartActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
@@ -29,38 +29,35 @@
                 <category android:name="android.intent.category.LAUNCHER" >
                 </category>
             </intent-filter>
-        </activity>
+       	</activity>
         
         
-<!-- TODO decide if these activities need intent-filters - lint says no -->
-        <activity 
+       <activity 
             android:name=".login.LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
-      <activity 
+       <activity 
             android:name="com.discover.mobile.register.EnhancedAccountSecurity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-           <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
-        <activity 
+       <activity 
             android:name=".login.LoggedInLandingPage"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+       </activity>
+       
+       <activity 
+            android:name=".login.LockOutUserActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
        </activity>
        
         <activity 
@@ -68,9 +65,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
         <activity 
@@ -78,9 +72,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-           <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
         <activity 
@@ -88,21 +79,13 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-            
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            
        </activity>
        
-         <activity 
+       <activity 
             android:name=".register.AccountInformationHelpActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
        <activity 
@@ -110,9 +93,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-              <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
        
        <activity 
@@ -120,9 +100,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
-               <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
        </activity>
 
     </application>
