--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -89,14 +89,14 @@
        </activity>
        
        <activity 
-            android:name=".login.ForgotCredentialsActivity"
+            android:name=".forgotuidpassword.ForgotCredentialsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
        <activity 
-            android:name=".login.ForgotUserIdActivity"
+            android:name=".forgotuidpassword.ForgotUserIdActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
