--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	
+    <!-- android:theme="@android:style/Theme.NoTitleBar" -->
     <application
     	android:name=".DiscoverApplication"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:theme="@style/AppTheme">
         
        	<activity 
             android:name=".login.StartActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" >
                 </action>
@@ -36,7 +38,8 @@
             android:name=".login.LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoTitleBar">
        </activity>
        
        <activity 
@@ -100,6 +103,10 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
+       </activity>
+       
+       <activity 
+            android:name=".navigation.NavigationMenuRootActivity">
        </activity>
 
     </application>
