--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
         android:allowBackup="false" 
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:logo="@drawable/discover_logo_inset">
         
        	<activity 
             android:name=".login.StartActivity"
