--- a/Phone/main/.project
+++ b/Phone/main/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Discover</name>
+	<name>Discover-Phone</name>
 	<comment></comment>
 	<projects>
 	</projects>
