--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
        </activity>
        
        <activity 
-            android:name="com.discover.mobile.register.EnhancedAccountSecurity"
+            android:name=".register.EnhancedAccountSecurityActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -61,28 +61,28 @@
        </activity>
        
         <activity 
-            android:name="com.discover.mobile.register.AccountInformationActivity"
+            android:name="com.discover.mobile.login.register.AccountInformationActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
         <activity 
-            android:name="com.discover.mobile.register.AccountInformationTwoActivity"
+            android:name=".register.CreateLoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
         <activity 
-            android:name=".register.AccountInformationConfirmationActivity"
+            android:name="com.discover.mobile.login.register.AccountInformationConfirmationActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
        <activity 
-            android:name=".register.AccountInformationHelpActivity"
+            android:name="com.discover.mobile.login.register.StrengthBarHelpActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -97,6 +97,13 @@
        
        <activity 
             android:name=".forgotuidpassword.ForgotUserIdActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+       </activity>
+       
+       <activity 
+            android:name=".forgotuidpassword.EnterNewPasswordActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
