--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
        </activity>
        
        <activity 
-            android:name=".register.EnhancedAccountSecurityActivity"
+            android:name="com.discover.mobile.login.register.EnhancedAccountSecurityActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
@@ -68,7 +68,7 @@
        </activity>
        
         <activity 
-            android:name=".register.CreateLoginActivity"
+            android:name="com.discover.mobile.login.register.CreateLoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
