Modified android manifest to support changes to file names. Adjusted spacing on account info confirm xml Added visibility='gone' to forgot_id layout so that invisible error labels do not take up space. Added quotations to a string in strings_help_strength_bar. Changed password and validation bars to support same business logic as the official application. ForgotUserIdActivity - Added hide and show methods for error labels. Using visibility=gone. Fixed strength bar help activity to support IntentExtraKeys and work. It has been broken since the rename and addition of IntentExtraKey

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -85,19 +85,19 @@
             android:screenOrientation="portrait">
        </activity>
        
-       <activity android:name=".forgotuidpassword.ForgotCredentialsActivity"
+       <activity android:name=".login.forgot.ForgotCredentialsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
-       <activity android:name=".forgotuidpassword.ForgotUserIdActivity"
+       <activity android:name=".login.forgot.ForgotUserIdActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
        </activity>
        
-       <activity android:name=".forgotuidpassword.EnterNewPasswordActivity"
+       <activity android:name=".login.forgot.EnterNewPasswordActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
