--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait">
-			<intent-filter>
+            <intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
@@ -31,9 +31,9 @@
 			android:screenOrientation="portrait">
 		</activity>
 
-		<activity android:name=".login.register.EnhancedAccountSecurityActivity"
+		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
+			android:launchMode="standard"
 			android:screenOrientation="portrait">
 		</activity>
 
@@ -51,19 +51,19 @@
 
 		<activity android:name=".login.register.RegistrationAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
+			android:launchMode="standard"
 			android:screenOrientation="portrait">
 		</activity>
 	
 		<activity android:name=".login.register.ForgotPasswordAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
+			android:launchMode="standard"
 			android:screenOrientation="portrait">
 		</activity>
 	
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
+			android:launchMode="standard"
 			android:screenOrientation="portrait">
 		</activity>
        
