--- a/Commons/main/AndroidManifest.xml
+++ b/Commons/main/AndroidManifest.xml
@@ -1,13 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.discover.mobile.commons"
+    package="com.discover.mobile.common"
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15" />
-
-    <!-- <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
-    </application> -->
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16" />
 
 </manifest>
