--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -15,18 +15,23 @@
 		android:allowBackup="false"
 		android:theme="@style/AppTheme"
 		android:logo="@drawable/discover_logo_inset">
-
-		<activity android:name=".login.StartActivity"
+		
+	    <activity android:name="SplashScreenActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
+			android:noHistory="true"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.NoTitleBar">
-			
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		
+		<activity android:name=".login.StartActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTask"
+			android:screenOrientation="portrait"
+			android:theme="@style/AppTheme.NoTitleBar" />
 
 		<activity android:name=".login.LoginActivity"
 			android:label="@string/app_name"
