The sliding drawer now switches the fragment in the main window according to user selection and allows section headers to be collapsed.

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -93,8 +93,9 @@
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait" />
+		
+		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity" />
 	
-		<activity android:name=".navigation.NavigationMenuRootActivity" />
        
     </application>
     
