minor fix for crash on action bar/shelf items, added tags for tracking on analytics

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -22,10 +22,8 @@
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.NoTitleBar">
 			
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+		    
+			
 		</activity>
 
 		<activity android:name=".login.LoginActivity"
@@ -94,7 +92,14 @@
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait" />
 		
-		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity" />
+		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity" >
+		    
+		    <intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			
+		    </activity>
 	
        
     </application>
