--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -42,8 +42,10 @@
 		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
-			android:screenOrientation="portrait" />
-		
+			android:screenOrientation="portrait"
+			android:noHistory="true">
+		</activity>
+
 		<activity android:name=".login.LoggedInLandingPage"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
@@ -67,32 +69,49 @@
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
-			android:screenOrientation="portrait" />
-		
-		<activity android:name=".login.register.CreateLoginActivity"
-			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
-	
-		<activity android:name=".login.register.AccountInformationConfirmationActivity"
-			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
-	
-		<activity android:name=".login.register.StrengthBarHelpActivity"
-			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
-	
-		<activity android:name=".login.forgot.ForgotCredentialsActivity"
-			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
-	
-		<activity android:name=".login.forgot.ForgotUserIdActivity"
-			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
+			android:screenOrientation="portrait"
+			android:noHistory="true">
+		</activity>
+       
+        <activity android:name=".login.register.CreateLoginActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait">
+       </activity>
+       
+        <activity android:name=".login.register.AccountInformationConfirmationActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+       </activity>
+       
+       <activity android:name=".login.register.StrengthBarHelpActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait">
+       </activity>
+       
+       <activity android:name=".login.forgot.ForgotCredentialsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+       </activity>
+       
+       <activity android:name=".login.forgot.ForgotUserIdActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+       </activity>
+       
+       <activity android:name=".login.forgot.EnterNewPasswordActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            >
+       </activity>
 
 		<activity android:name=".login.forgot.EnterNewPasswordActivity"
 			android:label="@string/app_name"
