--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
 		<activity android:name=".login.register.ForgotPasswordAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
-			android:screenOrientation="portrait" />
+			android:screenOrientation="portrait">
+		</activity>
 	
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
