--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<permission 
+	    android:name="com.discover.mobile.permission.C2D_MESSAGE" 
+	    android:protectionLevel="signature" /> 
+	<uses-permission android:name="com.discover.mobile.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    
 	
 	<application android:name=".DiscoverApplication"
 		android:icon="@drawable/discove_mobile_icn"
@@ -15,6 +23,13 @@
 		android:allowBackup="false"
 		android:theme="@style/AppTheme"
 		android:logo="@drawable/discover_logo_inset">
+		
+	    <!--  Xtify Provider -->
+	    <provider
+            android:name="com.xtify.sdk.db.Provider"
+            android:authorities="com.discover.mobile.XTIFY_PROVIDER"
+            android:exported="false" />
+	    <!--  Xtify Provider -->
 
 		<activity android:name=".login.StartActivity"
 			android:label="@string/app_name"
@@ -95,6 +110,42 @@
 			android:screenOrientation="portrait" />
 	
 		<activity android:name=".navigation.NavigationMenuRootActivity" />
+		
+		<!--  Xtify Setup -->
+		<receiver android:name="com.xtify.sdk.c2dm.C2DMBroadcastReceiver" >
+            <intent-filter android:permission="com.google.android.c2dm.permission.SEND" >
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+                <category android:name="com.discover.mobile" />
+            </intent-filter>
+            <intent-filter android:permission="com.google.android.c2dm.permission.SEND" >
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.discover.mobile" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.discover.mobile.common.push.XtifyNotifier" >
+            <intent-filter>
+                <action android:name="com.xtify.sdk.NOTIFIER" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.xtify.sdk.NotifActionReceiver" />
+        <receiver android:name="com.xtify.sdk.wi.AlarmReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.xtify.sdk.location.LocationUpdateService" />
+        <service android:name="com.xtify.sdk.c2dm.C2DMIntentService" />
+        <service android:name="com.xtify.sdk.alarm.MetricsIntentService" />
+        <service android:name="com.xtify.sdk.alarm.TagIntentService" />
+        <service android:name="com.xtify.sdk.alarm.RegistrationIntentService" />
+        <service android:name="com.xtify.sdk.alarm.LocationIntentService" />
+		
+		<!--  End Xtify Setup -->
+        <activity android:name=".push.ManagePushNotificationsFragment"></activity>
+        <activity android:name=".push.TermsAndConditionsActivity"></activity>
        
     </application>
     
