--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -70,8 +70,7 @@
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
-			android:screenOrientation="portrait"
-			android:noHistory="true">
+			android:screenOrientation="portrait">
 		</activity>
        
         <activity android:name=".login.register.CreateLoginActivity"
