--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -16,21 +16,18 @@
 		android:theme="@style/AppTheme"
 		android:logo="@drawable/discover_logo_inset">
 		
-		<activity android:name="SplashScreenActivity"
+		<activity android:name=".SplashScreenActivity"
 			android:label="@string/app_name"
 			android:noHistory="true"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.NoTitleBar">
-			
-			<!-- TEMP
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-			-->
 		</activity>
 		
-		<activity android:name=".login.StartActivity"
+		<activity android:name=".StartActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
@@ -84,28 +81,24 @@
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait" />
 		
-		<activity android:name=".login.forgot.ForgotCredentialsActivity"
+		<activity android:name=".login.register.ForgotTypeSelectionActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
 			android:noHistory="true" />
 		
-		<activity android:name=".login.forgot.ForgotUserIdActivity"
+		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
 			android:noHistory="true" />
 		
-		<activity android:name=".login.forgot.EnterNewPasswordActivity"
+		<activity android:name=".login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
 			android:screenOrientation="portrait" />
 	
 		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
 		</activity>
 		
 	</application>
