One last fix to the manifest.

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -98,8 +98,7 @@
 			android:launchMode="singleTop"
 			android:screenOrientation="portrait" />
 	
-		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity">
-		</activity>
+		<activity android:name="com.discover.mobile.navigation.NavigationRootActivity" />
 		
 	</application>
 	
