--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -144,8 +144,8 @@
         <service android:name="com.xtify.sdk.alarm.LocationIntentService" />
 		
 		<!--  End Xtify Setup -->
-        <activity android:name=".push.ManagePushNotificationsFragment"></activity>
-        <activity android:name=".push.TermsAndConditionsActivity"></activity>
+        <activity android:name="com.discover.mobile.push.PushManageFragment"></activity>
+        <activity android:name="com.discover.mobile.push.PushTermsAndConditionsActivity"></activity>
        
     </application>
     
