--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		
 		<jackson.version>2.1.1</jackson.version>
 		
-		<sonar.skippedModules>ActionBarSherlock,SlidingMenu</sonar.skippedModules>
+		<sonar.skippedModules>actionbarsherlock,SlidingMenu</sonar.skippedModules>
 	</properties>
 	
 	<dependencies>
