Committing tasks TA8681, TA8680 and TA8721 of user story US3849
Fixed/Implemented server calls for registering the vendor id with Xtify and Discover

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -155,6 +155,7 @@
         <activity android:name=".push.PushTermsAndConditionsActivity"></activity>
         <activity android:name=".navigation.NavigationRootActivity"></activity>
         <activity android:name=".push.PushEnrollActivity"></activity>
+        <activity android:name=".push.PushNowAvailableActivity"></activity>
     </application>
     
 </manifest>
