Added a class for custom edit texts - will be made into an abstract class so that we can extend it to all kinds of input fields that we need. Changed the manifest so that it launches directly to the login screen. Started modifying the login screen to abide by 13.2 comps.

--- a/Phone/main/project.properties
+++ b/Phone/main/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:16
+target=android-15
 android.library.reference.1=../../Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
 android.library.reference.2=../../Commons/main
 android.library.reference.3=../../Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
