--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -35,10 +35,7 @@
 			android:noHistory="true"
 			android:screenOrientation="portrait"
 			android:theme="@style/AppTheme.NoTitleBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+
 		</activity>
 		
 		<activity android:name=".StartActivity"
@@ -51,7 +48,12 @@
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
-			android:theme="@style/AppTheme.NoTitleBar" />
+			android:theme="@style/AppTheme.NoTitleBar" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		
 		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
