--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ tmp/**/*
 # Ignore Project Files Causing Building Issues
 .Phone/main/project.properties
 .project
+Phone/main/src/com/discover/mobile/login/LoginActivity.java.BACKUP.8438.java
+Phone/main/src/com/discover/mobile/login/LoginActivity.java.BASE.8438.java
+Phone/main/src/com/discover/mobile/login/LoginActivity.java.LOCAL.8438.java
+Phone/main/src/com/discover/mobile/login/LoginActivity.java.REMOTE.8438.java
+Phone/main/src/com/discover/mobile/login/LoginActivity.java.orig
