TA11444 - Sprint 2 Pre Work
Made the root activity an abstract class and the menu root activity also an abstract class. Updated other classes to use the new abstracted classes.

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -142,7 +142,8 @@
 		
 		<!--  End Xtify Setup -->
         <activity android:name=".push.PushTermsAndConditionsActivity"></activity>
-        <activity android:name=".navigation.NavigationRootActivity"></activity>
+        <activity android:name="com.discover.mobile.navigation.NavigationRootActivityCard"></activity>
+        <activity android:name="com.discover.mobile.bank.navigation.NavigationRootActivityBank" ></activity>
         <activity android:name="com.discover.mobile.push.PushEnrollFragment"></activity>
     </application>
     
